--- a/bm2dx/ffmpeg/convert.html
+++ b/bm2dx/ffmpeg/convert.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>弐寺の録画をiPhoneでも再生できるように変換する</title>
-  <meta name="description" content="アップロードせずに変換できるんです！">
+  <meta name="description" content="アップロードせずに変換できるんです！その他にも、プレイヤー上の動作も安定させることができます。">
   <style>
     body {
       font-family: sans-serif;
@@ -55,7 +55,7 @@
         cv_progress.textContent = "変換状況：ファイルを選択してください";
         return window.FFmpeg;
       }
-      cv_progress.textContent = "ffmpegを実行できません。ページの再読み込みをお試しください。";
+      cv_progress.textContent = "うーん... なんか調子悪いかも。 再読み込みした方が良いかな...";
       return {};
     };
     const addLog = (type, message) => {
