--- a/private/warning.html
+++ b/private/warning.html
@@ -27,6 +27,7 @@
 </head>
 <body>
   <svg class="main_container">
+    <text x="292" y="18" fill="#ddd" font-size="14" text-anchor="end" id="page">0/0</text>
     <text x="4" y="19" fill="#ffffff" font-size="14" id="title">情報取得中・・・</text>
     <text x="15" y="49" fill="#ffffff" font-size="26" id="region" textLength="260" lengthAdjust="spacingAndGlyphs"></text>
   </svg>
@@ -37,8 +38,8 @@
     ctx.font = "26px 'Noto Sans JP";
     document.body.classList.add(window.location.search.includes("font=serif") ? "serif" : "sansserif");
     window.exWarningInformation = [];
-    window.viewTick = 999;
     window.viewingInformationIndex = -1;
+    window.pageElement = document.getElementById("page");
     window.titleElement = document.getElementById("title");
     window.regionElement = document.getElementById("region");
     var warnCodes = {
@@ -123,8 +124,6 @@
           }
         }
       }
-      if(zero){
-      }
       if(firstget) requestAnimationFrame(main);
       firstget = false;
     }
@@ -136,23 +135,21 @@
     }, 60000);
 
     function main(){
-      viewTick++;
-      if (viewTick > 420){
-        if (!exWarningInformation.length){
-          titleElement.textContent = "";
-          regionElement.textContent = "特別警報は全て解除";
-        } else {
-          viewingInformationIndex++;
-          if (viewingInformationIndex >= exWarningInformation.length) viewingInformationIndex = 0;
-          const region = exWarningInformation[viewingInformationIndex].region;
-          regionElement.setAttribute("textLength", Math.min(ctx.measureText(region).width, 260));
-          regionElement.textContent = region;
-          titleElement.textContent = exWarningInformation[viewingInformationIndex].type+"発表中";
-          viewTick = 0;
-        }
+      if (!exWarningInformation.length){
+        titleElement.textContent = "";
+        regionElement.textContent = "特別警報は全て解除";
+      } else {
+        viewingInformationIndex++;
+        if (viewingInformationIndex >= exWarningInformation.length) viewingInformationIndex = 0;
+        const region = exWarningInformation[viewingInformationIndex].region;
+        regionElement.setAttribute("textLength", Math.min(ctx.measureText(region).width, 260));
+        regionElement.textContent = region;
+        titleElement.textContent = exWarningInformation[viewingInformationIndex].type + "発表中";
+        pageElement.textContent = (viewingInformationIndex + 1) + "/" + (viewingInformationIndex.length);
       }
-      requestAnimationFrame(main);
     }
+    setInterval(main, 7000);
+    main();
   </script>
 </body>
 </html>
