--- a/private/warning.html
+++ b/private/warning.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ex Warning List</title>
+  <title>特別警報表示 （300 x 60）</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@700&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@900&display=swap');
     body {
       margin: 0;
+    }
+    p {
+      margin: 5px 8px;
     }
     .serif {
       font-family: 'Noto Serif JP', serif;
@@ -22,6 +25,7 @@
       height: 60px;
       background-color: black;
       color: #ffffff;
+      margin-bottom: 16px;
     }
   </style>
 </head>
@@ -32,6 +36,7 @@
     <text x="15" y="49" fill="#ffffff" font-size="26" id="region" textLength="260" lengthAdjust="spacingAndGlyphs"></text>
   </svg>
   <p>v1.0.1（自動更新実装）</p>
+  <p>v1.0.2（市町村単位の表示に変更）</p>
   <script>
     const canvas = document.createElement("canvas");
     const ctx = canvas.getContext("2d");
@@ -84,23 +89,30 @@
     xhr.areas.overrideMimeType('text/plain; charset=uft-8');
     xhr.areas.onload = function(){
       xhr.areasReq = JSON.parse(this.response);
+      window.code2pref = function(targetCode){
+        if (targetCode == "370000") return "香川県";
+        if (targetCode == "270000") return "大阪府";
+        if (["011000","012000","013000","014030","014100","015000","016000","017000"].includes(targetCode)) return "北海道";
+        if (["460100","460040"].includes(targetCode)) return "鹿児島県";
+        if (["471000","472000","473000","474000"].includes(targetCode)) return "沖縄県";
+        return xhr.areasReq.offices[targetCode].name;
+      };
+      window.code2city = function(targetCode){
+        const prefCode = xhr.areasReq.class10s[xhr.areasReq.class15s[xhr.areasReq.class20s[targetCode].parent].parent].parent;
+        const prefname = window.code2pref(prefCode);
+        return prefname + xhr.areasReq.class20s[targetCode].name;
+      };
       window.code2name = function(targetCode){
-        if(targetCode == "370000") return "香川県";
-        if(targetCode == "270000") return "大阪府";
+        if (targetCode == "370000") return "香川県";
+        if (targetCode == "270000") return "大阪府";
         let x = [
           {name:"北海道",enName:"Hokkaido ",officeCodes:["011000","012000","013000","014030","014100","015000","016000","017000"]},
           {name:"鹿児島県",enName:"Kagoshima ",officeCodes:["460100","460040"]},
           {name:"沖縄県",enName:"Okinawa ",officeCodes:["471000","472000","473000","474000"]}
         ];
-        let class2 = xhr.areasReq.class10s[targetCode].name;
-        let toClass1 = xhr.areasReq.class10s[targetCode].parent;
-        for(let y of x){
-          let z = y.officeCodes.indexOf(toClass1);
-          if(z !== -1){
-            return y.name + class2;
-          }
-        }
-        return xhr.areasReq.offices[toClass1].name + class2;
+        let areaName = xhr.areasReq.class10s[targetCode].name;
+        let prefCode = xhr.areasReq.class10s[targetCode].parent;
+        return window.code2pref(prefCode) + areaName;
       }
       xhr.warnList.send();
     };
@@ -112,8 +124,8 @@
       let list = JSON.parse(this.response);
       let zero = true;
       for (let pt of list) {
-        for (let ars of pt.areaTypes[0].areas) {
-          let code = code2name(ars.code);
+        for (let ars of pt.areaTypes[1].areas) {
+          let code = code2city(ars.code);
           let first = true;
           for (let warn of ars.warnings) {
             if ((warn.status == "継続" || warn.status == "発表") && warnCodes[warn.code].name2 === "特別警報") {
@@ -144,11 +156,11 @@
         const region = exWarningInformation[viewingInformationIndex].region;
         regionElement.setAttribute("textLength", Math.min(ctx.measureText(region).width, 260));
         regionElement.textContent = region;
-        titleElement.textContent = exWarningInformation[viewingInformationIndex].type + "発表中";
-        pageElement.textContent = (viewingInformationIndex + 1) + "/" + (viewingInformationIndex.length);
+        titleElement.textContent = exWarningInformation[viewingInformationIndex].type + " 発表中";
+        pageElement.textContent = (viewingInformationIndex + 1) + "/" + (exWarningInformation.length);
       }
     }
-    setInterval(main, 7000);
+    setInterval(main, 3000);
     main();
   </script>
 </body>
