--- a/quakemap-v2/index.html
+++ b/quakemap-v2/index.html
@@ -18,13 +18,10 @@ body {
 #title {
   position: absolute;
   left: 5px; top: 5px;
-  background: #fff;
+  color: #fff;
+  background: #00336f;
   border-radius: 10px;
-  padding: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border: 1px solid #c9f2ff;
-  width: auto;
+  padding: 5px 20px;
   height: 35px;
   font-size: 25px;
   z-index: 1000;
