--- a/genshin-rmm/detail.html
+++ b/genshin-rmm/detail.html
@@ -31,7 +31,7 @@
     }
     header a {
       text-decoration: none;
-      color: #fff;
+      color: #ddd;
     }
     .tap {
       background-color: #eabd59;
