--- a/genshin-rmm/detail.html
+++ b/genshin-rmm/detail.html
@@ -187,7 +187,7 @@
       <div id="level-1" i18n="level-hard" style="display: none;">ノーマル</div>
       <div id="level-2" i18n="level-pro" style="display: none;">ハード</div>
       <div id="level-3" i18n="level-legendary" style="display: none;">レジェンド</div>
-      <div id="level-count">★★★★★★☆☆☆☆</div>
+      <div id="level-count">☆☆☆☆☆☆☆☆☆☆</div>
     </div>
     <div class="others"><div id="bpm">32~259</div><div id="duration">2:01</div><div id="notes">1636</div></div>
   </div>
