--- a/genshin-rmm/index.html
+++ b/genshin-rmm/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>原神 幾千のメロディー 譜面保管所</title>
-  <meta name="description" content="原神の音ゲーの譜面保管所（仮）（作ってみたかっただけ）">
+  <meta name="description" content="原神の音ゲーの譜面保管所です。作ってみたかったんです。">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="./fonts/font.css" rel="stylesheet">
