--- a/genshin-rmm/detail.html
+++ b/genshin-rmm/detail.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>原神 幾千のメロディー 譜面保管所 詳細</title>
+  <meta name="description" content="原神の音ゲーの譜面保管所です。詳細ページです。">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="./fonts/font.css" rel="stylesheet">
